--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hello Coursera</title>
   </head>
-  <body><h1>Hello Coursera student! Abou est trop fort et abou rererewtest</h1>
+  <body><h1>Hello Coursera student! </h1>
 
   </body>
 </html>
