je reprend cette partie2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hello Coursera</title>
   </head>
-  <body><h1>Abou wants to be very good in angular JS </h1>
+  <body><h1>Abou wants to be very good in angular JS. One more modification </h1>
 
   </body>
 </html>
