--- a/assignments/assignment3/foundItemList.html
+++ b/assignments/assignment3/foundItemList.html
@@ -6,7 +6,7 @@
     <table class="table table-hover"  ng-if="foundDirectiveControlleur.found.length >= 1">
         <thead>
         <tr>
-            <th>Name</th>
+            <th>Short_name Name</th>
             <th>Description</th>
             <th>Action</th>
         </tr>
